--- a/AnkiAnalysis/index.html
+++ b/AnkiAnalysis/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 	<title>Analysis of AnkiGame and AnkiPlay</title>
-	 <!-- Firebase App is always required and must be first -->
+</head>
+<body>
+    <div id="connection" />
+
+    <!-- Firebase App is always required and must be first -->
     <script src="/__/firebase/5.2.0/firebase-app.js"></script>
 
     <!-- Add additional services that you want to use -->
@@ -16,9 +20,8 @@
 
     <!-- <script src="/__/firebase/init.js"></script> -->
 
-    <script src="index.js"></script>
-</head>
-<body>
-
+    <script src="https://fb.me/react-15.0.1.min.js"></script>
+    <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
+    <script src="built/index.js"></script>
 </body>
 </html>
