analysis: Added number of users for every group

--- a/AnkiAnalysis/index.html
+++ b/AnkiAnalysis/index.html
@@ -4,7 +4,7 @@
 	<title>Analysis of AnkiGame and AnkiPlay</title>
 </head>
 <body>
-    <div id="connection" />
+    <div id="analysis" />
 
     <!-- Firebase App is always required and must be first -->
     <script src="/__/firebase/5.2.0/firebase-app.js"></script>
@@ -23,5 +23,6 @@
     <script src="https://fb.me/react-15.0.1.min.js"></script>
     <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
     <script src="built/index.js"></script>
+    <script src="built/board.js"></script>
 </body>
 </html>
